--- a/public/index.html
+++ b/public/index.html
@@ -400,7 +400,7 @@
     </div>
 
     <!-- NEW: Game Over Screen -->
-    <div id="game-over-screen" class="screen" style="display: none; padding: 20px; max-width: 900px;">
+    <div id="game-over-screen" class="screen" style="display: none; padding: 20px;">
       <div class="game-over-header">
         <img src="/logo.svg" alt="Logo" class="app-logo-endscreen" style="height:48px; margin-bottom:12px;" />
         <h2>Game Results</h2>
