--- a/public/index.html
+++ b/public/index.html
@@ -54,14 +54,14 @@
   <div id="auth-screen" class="screen">
     <img src="/logo.svg" alt="Logo" class="app-logo-lobby" style="height:48px; margin-bottom:20px; display:block; margin-left:auto; margin-right:auto;" />
     <h1>Remote Stock Exchange</h1>
-    <div style="margin: 20px 0;">
+    <div style="margin: 20px 0; text-align: center;">
       <h3>Choose Your Mode</h3>
-      <div style="display: flex; flex-direction: column; gap: 15px; max-width: 400px; margin: 0 auto;">
-        <button id="loginModeBtn" style="padding: 15px; font-size: 16px; background: #4CAF50; color: white; border: none; border-radius: 8px; cursor: pointer;">
+      <div style="display: flex; flex-direction: column; align-items: center; gap: 15px; max-width: 400px; margin: 0 auto;">
+        <button id="loginModeBtn" style="padding: 15px 24px; font-size: 16px; background: #4CAF50; color: white; border: none; border-radius: 8px; cursor: pointer; width: 100%; max-width: 320px; text-align: center;">
           🔐 Login Mode
           <div style="font-size: 12px; margin-top: 5px; opacity: 0.9;">Track your stats & view dashboard</div>
         </button>
-        <button id="guestModeBtn" style="padding: 15px; font-size: 16px; background: #2196F3; color: white; border: none; border-radius: 8px; cursor: pointer;">
+        <button id="guestModeBtn" style="padding: 15px 24px; font-size: 16px; background: #2196F3; color: white; border: none; border-radius: 8px; cursor: pointer; width: 100%; max-width: 320px; text-align: center;">
           👤 Guest Mode
           <div style="font-size: 12px; margin-top: 5px; opacity: 0.9;">Play without account</div>
         </button>
@@ -69,14 +69,14 @@
     </div>
     
     <!-- Login Form (hidden by default) -->
-    <div id="login-form" style="display: none; max-width: 400px; margin: 20px auto;">
+    <div id="login-form" style="display: none; max-width: 400px; margin: 20px auto; text-align: center;">
       <h3>Login / Sign Up</h3>
-      <div style="display: flex; flex-direction: column; gap: 10px;">
-        <input type="email" id="emailInput" placeholder="Email" style="padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
-        <input type="password" id="passwordInput" placeholder="Password" style="padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
-        <button id="loginBtn" style="padding: 10px; background: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer;">Login</button>
-        <button id="signupBtn" style="padding: 10px; background: #2196F3; color: white; border: none; border-radius: 4px; cursor: pointer;">Sign Up</button>
-        <button id="backToModeBtn" style="padding: 10px; background: #757575; color: white; border: none; border-radius: 4px; cursor: pointer;">Back</button>
+      <div style="display: flex; flex-direction: column; gap: 10px; align-items: center; width: 100%; max-width: 320px; margin: 0 auto;">
+        <input type="email" id="emailInput" placeholder="Email" style="padding: 10px; border: 1px solid #ddd; border-radius: 4px; width: 100%; box-sizing: border-box;">
+        <input type="password" id="passwordInput" placeholder="Password" style="padding: 10px; border: 1px solid #ddd; border-radius: 4px; width: 100%; box-sizing: border-box;">
+        <button id="loginBtn" style="padding: 10px 20px; background: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer; width: 100%; text-align: center;">Login</button>
+        <button id="signupBtn" style="padding: 10px 20px; background: #2196F3; color: white; border: none; border-radius: 4px; cursor: pointer; width: 100%; text-align: center;">Sign Up</button>
+        <button id="backToModeBtn" style="padding: 10px 20px; background: #757575; color: white; border: none; border-radius: 4px; cursor: pointer; width: 100%; text-align: center;">Back</button>
         <div id="auth-error" style="color: red; font-size: 14px; margin-top: 10px; display: none;"></div>
       </div>
     </div>
